# cc_log_benchmark

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  build.bat  build.sh  gen_echarts_data.py  run_benchmark.sh
c_cpp/: CMakeLists.txt
c_cpp/gbenchmark/haclog/: gbenchmark_haclog.cpp
c_cpp/gbenchmark/nanolog/: gbenchmark_nanolog.cpp
c_cpp/gbenchmark/spdlog_async/: gbenchmark_spdlog_async.cpp
c_cpp/gbenchmark/spdlog_sync/: gbenchmark_spdlog_sync.cpp
c_cpp/gen_random_data/: gen_random_data.cpp
c_cpp/log_msg/: log_msg.h
gbenchmark/: log_gbenchmark.h
gbenchmark/c/haclog/: gbenchmark_haclog.cpp
gbenchmark/cpp/easyloggingpp/: gbenchmark_easyloggingpp.cpp
gbenchmark/cpp/fmtlog/: gbenchmark_fmtlog.cpp
gbenchmark/cpp/fmtlog_block/: gbenchmark_fmtlog_block.cpp
gbenchmark/cpp/fmtlog_drop/: gbenchmark_fmtlog_drop.cpp
gbenchmark/cpp/glog/: gbenchmark_glog.cpp
gbenchmark/cpp/loguru/: gbenchmark_loguru.cpp
gbenchmark/cpp/nanolog/: gbenchmark_nanolog.cpp
gbenchmark/cpp/quill/: gbenchmark_quill.cpp
gbenchmark/cpp/quill_bounded/: gbenchmark_quill_bounded.cpp
gbenchmark/cpp/quill_bounded_blocking/: gbenchmark_quill_bounded_blocking.cpp
gbenchmark/cpp/quill_bounded_dropping/: gbenchmark_quill_bounded_dropping.cpp
gbenchmark/cpp/quill_unbounded/: gbenchmark_quill_unbounded.cpp
gbenchmark/cpp/reckless/: gbenchmark_reckless.cpp
gbenchmark/cpp/spdlog_async/: gbenchmark_spdlog_async.cpp
gbenchmark/cpp/spdlog_sync/: gbenchmark_spdlog_sync.cpp
log_msg/: log_msg.cpp
report/benchmark_20231013/gbenchmark/: benchmark_easyloggingpp.txt  benchmark_fmtlog.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_nanolog.txt  benchmark_quill_bounded.txt  benchmark_quill_unbounded.txt  benchmark_reckless.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt
report/benchmark_20231014/echarts/: iter_repeat.js  min_time.js
report/benchmark_20231014/gbenchmark/: benchmark_easyloggingpp.txt  benchmark_fmtlog.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_nanolog.txt  benchmark_quill_bounded.txt  benchmark_quill_unbounded.txt  benchmark_reckless.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt
report/benchmark_20231018/gbenchmark/: benchmark_easyloggingpp.txt  benchmark_fmtlog.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_nanolog.txt  benchmark_quill_bounded.txt  benchmark_quill_unbounded.txt  benchmark_reckless.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt
report/benchmark_20250214/gbenchmark/: benchmark_easyloggingpp.txt  benchmark_fmtlog.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_nanolog.txt  benchmark_quill_bounded_blocking.txt  benchmark_quill_bounded_dropping.txt  benchmark_reckless.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt
report/benchmark_20250221/benchmark/: benchmark_easyloggingpp.txt  benchmark_fmtlog_block.txt  benchmark_fmtlog_drop.txt  benchmark_glog.txt  benchmark_haclog.txt  benchmark_loguru.txt  benchmark_nanolog.txt  benchmark_quill_bounded_blocking.txt  benchmark_quill_bounded_dropping.txt  benchmark_reckless.txt  benchmark_spdlog_async.txt  benchmark_spdlog_sync.txt
scripts/: monitor_cpu_freq.sh  set_cpu_freq.sh  turbo_boost.sh
